prusti/tests/pass/parse/after_expiry_fail.stderr
error: expected `,`
 --> $DIR/after_expiry_fail.rs:7:19
  |
7 | #[after_expiry_if(a)]
  |                   ^

error: expected `,`
  --> $DIR/after_expiry_fail.rs:10:24
   |
10 | #[after_expiry_if(a => a)]
   |                        ^

error: unexpected token
  --> $DIR/after_expiry_fail.rs:13:17
   |
13 | #[after_expiry(a, a)]
   |                 ^

error: unexpected token
  --> $DIR/after_expiry_fail.rs:16:22
   |
16 | #[after_expiry(a => a, a)]
   |                      ^

error: aborting due to 4 previous errors

